# quark

./: .gitignore  .gitkeep  Cargo.toml  README.md
.github/workflows/: ci.yml  gpu-experiments.yml
docs/: ANALYSIS.md  COMPRESSION.md  DECISION.md  DESIGN.md  NEXT.md  RESULTS.md
docs/report/: REPORT.md
experiments/: analyze_runs.py  blimp_analysis.py  check_shard_denominators.sh  gpt2_baseline.py  next_steps.py  protocol_fixture.json  report.py  run_analysis.py  scaling_budget.py
experiments/gpu/: README.md  collect.py  run_experiments.sh  stub_quark.py  test_run_experiments.sh
experiments/research/: competitors.md  techniques.md
src/: config.rs  infer.rs  lib.rs  test_util.rs
src/compress/: config.rs  eval.rs  mod.rs  model.rs  quantize.rs
src/data/: dataset.rs  mod.rs  shard.rs  tokenizer.rs
src/eval/: blimp.rs  corpus.rs  generate.rs  mod.rs
src/model/: attention.rs  block.rs  ffn.rs  lm.rs  mod.rs
src/train/: metric.rs  mod.rs  output.rs
tests/: data_pipeline.rs
