[package]
name = "quark"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"
description = "A 3M-parameter language model family and training harness built on burn"
license = "MIT OR Apache-2.0"
repository = "https://github.com/uselessgoddess/quark"

[dependencies]
# `dataset` gates `burn::data::{dataset, dataloader}` -- Batcher, Dataset and
# DataLoaderBuilder all live behind it. `train` pulls in burn-train (and
# implies autodiff + dataset); `tui` and `metrics` give the live dashboard and
# the GPU/CPU counters, which are what make a multi-hour run on someone else's
# machine legible rather than a silent wait.
#
# `flex` costs nothing: burn-train already depends on burn-flex unconditionally
# (burn-train/Cargo.toml), so the feature only re-exports an
# already-compiled crate. We need the name because `ItemLazy::ItemSync` has to
# land on a concrete CPU backend, and Flex is the one burn's own outputs use.
burn = { version = "0.21", default-features = false, features = [
    "std",
    "autodiff",
    "dataset",
    "train",
    "tui",
    "metrics",
    "flex",
] }
burn-ndarray = { version = "0.21", optional = true }
burn-wgpu = { version = "0.21", optional = true }
burn-cuda = { version = "0.21", optional = true }
burn-rocm = { version = "0.21", optional = true }

anyhow = "1"
tokenizers = { version = "0.23", default-features = false, features = ["onig", "progressbar"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.9"
rand_chacha = "0.9"
memmap2 = "0.9"
rayon = "1"
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
burn-ndarray = "0.21"
approx = "0.5"
tempfile = "3"

[features]
# `ndarray` is the default so that `cargo test` and CI run on CPU with no GPU
# present. Training uses `--features wgpu`.
default = ["ndarray"]
ndarray = ["dep:burn-ndarray", "burn/ndarray"]
wgpu = ["dep:burn-wgpu", "burn/wgpu"]
cuda = ["dep:burn-cuda", "burn/cuda"]
# ROCm/HIP, for AMD cards. Untested -- nobody here has one. It is offered
# because the alternative on AMD is wgpu, and which of the two is faster is a
# question only someone holding the card can answer.
#
# `vulkan` is wgpu with a SPIR-V compiler instead of the WGSL one. It shares
# `burn-wgpu`, so it is not a third GPU stack -- it is the same one, compiled
# for a backend AMD drivers do better on. burn's own matmul benchmarks
# (burn.dev/blog/sota-multiplatform-matmul) put Vulkan ahead of ROCm on the two
# AMD cards they measured, so try this one first.
rocm = ["dep:burn-rocm", "burn/rocm"]
vulkan = ["dep:burn-wgpu", "burn/vulkan"]


[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

# Tests exercise real training steps; without optimization the ndarray backend
# makes the suite unusably slow.
[profile.test]
opt-level = 2

[profile.dev.package."*"]
opt-level = 3
